  TEZ-2351. Remove GroupByOrderbyMRRTest example from tez-tests.
  TEZ-2419. Inputs/Outputs should inform the Processor about Interrupts when interrupted during a blocking Op.
  TEZ-1752. Inputs / Outputs in the Runtime library should be interruptable.
  TEZ-1970. Fix javadoc warnings in SortMergeJoinExample.

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2504. Tez UI: tables - show status column without scrolling, numeric 0 shown as Not available
  TEZ-2478. Move OneToOne routing to store events in Tasks.
  TEZ-2482. Tez UI: Mouse events not working on IE11
  TEZ-1529. ATS and TezClient integration in secure kerberos enabled cluster.
  TEZ-2481. Tez UI: graphical view does not render properly on IE11
  TEZ-2474. The old taskNum is logged incorrectly when parallelism is changed
  TEZ-2460. Temporary solution for issue due to YARN-2560
  TEZ-2455. Tez UI: Dag view caching, error handling and minor layout changes
  TEZ-2453. Tez UI: show the dagInfo is the application has set the same.
  TEZ-2447. Tez UI: Generic changes based on feedbacks.
  TEZ-2409. Allow different edges to have different routing plugins

Release 0.7.0: 2015-05-18

INCOMPATIBLE CHANGES
  TEZ-2176. Move all logging to slf4j. (commons-logging jar no longer part of Tez tar)
  TEZ-1993. Implement a pluggable InputSizeEstimator for grouping fairly.
  TEZ-2424. Bump up max counter group name length limit to account for per_io counters.
    Default max limit increased. Should not affect existing users.

ALL CHANGES:
  TEZ-2446. Tez UI: Add tezVersion details when downloading timeline data for offline use
  TEZ-2432. Syntax error in DOAP file release section
  TEZ-2445. Disable the object cleanup in local mode in LogicalIOProcessorRuntimeTask.
  TEZ-2057. tez-dag/pom.xml contains versions for dependencies.
  TEZ-2435. Add public key to KEYS
  TEZ-2421. Deadlock in AM because attempt and vertex locking each other out