@@ -30,6 +30,7 @@ Release 0.7.1: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+. TEZ-2568. V_INPUT_DATA_INFORMATION may happen after vertex is initialized (zjffdu)
   TEZ-2504. Tez UI: tables - show status column without scrolling, numeric 0 shown as Not available
   TEZ-2478. Move OneToOne routing to store events in Tasks.
   TEZ-2482. Tez UI: Mouse events not working on IE11
